ArgoCD/django/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app: django-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-deploy
  template:
    metadata:
      labels:
        app: django-deploy
    spec:
      containers:
      - name: django-deploy
        image: sjin1105/django:5
        ports:
        - containerPort: 8000
          protocol: TCP
