ArgoCD/django/django-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app: django-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-deploy
  template:
    metadata:
      labels:
        app: django-deploy
    spec:
      containers:
      - name: django-deploy
        image: sjin1105/inno:31
        ports:
        - containerPort: 6666
          protocol: TCP
      imagePullSecrets:
      - name: harbor
