ArgoCD/django/django-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
spec:
  type: ClusterIP
  ports:
  - port: 6666
    targetPort: 6666
  selector:
    app: django-deploy
